# jf_pygments

./: Justfile  debug.py  pyproject.toml
src/jf_pygments/: __init__.py
src/jf_pygments/lexers/: sql.py  table_schema.py
src/jf_pygments/styles/: baldr.py  white.py
