[project]
name = "jf_pygments"
version = "0.3.0"
description = "Extend the Python syntax highlighter with some custom lexers and styles."
authors = [{ name = "Josef Friedrich", email = "josef@friedrich.rocks" }]
requires-python = ">=3.10,<4"
readme = "README.rst"
license = "GPL-3.0-only"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]
dependencies = [
    "pygments>=2.19.2",
]

[project.urls]
Source = "https://github.com/Josef-Friedrich/jf_pygments"
Issues = "https://github.com/Josef-Friedrich/jf_pygments/issues"

[project.entry-points."pygments.styles"]
white = "jf_pygments:WhiteStyle"
baldr = "jf_pygments:BaldrStyle"

[project.entry-points."pygments.lexers"]
baldr-sql = "jf_pygments:BaldrSqlLexer"
table-schema = "jf_pygments:TableSchemaLexer"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "types-pygments>=2.19.0.20251121",
]

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"
